[project]
name = "steam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.15",
    "aiohttp-socks>=0.10.1",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]
